--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -107,7 +107,7 @@
               </a>
               <p style="padding-right: 10px !important; margin: 0;"> > </p>
               <a href="#" class="nav-link ">
-                  <b> Travel Pass </b>
+                  <b> Dashboard </b>
               </a>
             </div>
             <div class="d-flex justify-content-around rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; width: 15%; padding: 5px;"> 
@@ -123,27 +123,58 @@
     </div>
 
     <div class="d-flex gap-4" style="padding-top: 25px !important;"> 
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Total Pass</p>
-              <p style="font-size:1.5rem;"><b>30</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
-      <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
-           <div class="d-flex flex-column justify-content-around">
-              <p>Upcoming Pass</p>
-              <p style="font-size:1.5rem;"><b>30</b></p>
-           </div>
-           <div class="d-flex">
-              <p></p>
-              <p class="mt-auto p-2 bd-highlight">Totals</p>
-           </div>
-      </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>Employees</p>
+                <p style="font-size:1.5rem;"><b>30</b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+             <div class="d-flex flex-column justify-content-around">
+                <p>In office</p>
+                <p style="font-size:1.5rem;"><b>30</b></p>
+             </div>
+             <div class="d-flex">
+                <p></p>
+                <p class="mt-auto p-2 bd-highlight">Totals</p>
+             </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+            <div class="d-flex flex-column justify-content-around">
+               <p>Absent</p>
+               <p style="font-size:1.5rem;"><b>30</b></p>
+            </div>
+            <div class="d-flex">
+               <p></p>
+               <p class="mt-auto p-2 bd-highlight">Totals</p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+            <div class="d-flex flex-column justify-content-around">
+               <p>Earnings</p>
+               <p style="font-size:1.5rem;"><b>30</b></p>
+            </div>
+            <div class="d-flex">
+               <p></p>
+               <p class="mt-auto p-2 bd-highlight">Totals</p>
+            </div>
+        </div>
+        <div class="d-flex justify-content-between flex-fill rounded-1" style="background: #F5F5F5; border: solid #dddddd 1px; padding: 15px;">
+            <div class="d-flex flex-column justify-content-around">
+               <p>Deductions</p>
+               <p style="font-size:1.5rem;"><b>30</b></p>
+            </div>
+            <div class="d-flex">
+               <p></p>
+               <p class="mt-auto p-2 bd-highlight">Totals</p>
+            </div>
+        </div>
     </div>
+    
 </div>
 
 
