--- a/views/partials/Aside.ejs
+++ b/views/partials/Aside.ejs
@@ -1,75 +1,77 @@
-<div class="container">
-    <aside class="container-aside">
-        <div class="container-aside-list">
-            <label for="employee">Dashboard</label>
-            <div class="container-aside-list-dropdown  ">
-                <a href="/admin/">
-                    <i class="fa-solid fa-chart-bar"></i>
-                    <label for="">Dashboard</label>
+<div class="d-flex flex-column flex-shrink-0 p-3" style="width: 280px; padding: 0 !important;">
+    <a href="#" class="d-flex flex-column align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none" style="padding: 30px">
+        <div class="d-flex flex-row justify-content-center">
+            <img src="/img/bfar-logo.png" class="img-fluid" alt="..." style="max-width: 40%;">
+            <img src="/img/niftc.png" class="img-fluid" alt="..." style="max-width: 40%;">
+        </div>
+            <p class="text-center fs-5" style="font-size: 18px !important; color: #67668A; ">BFAR Management System</p>
+        
+    </a>
+    
+    <ul class="nav nav-pills flex-column mb-auto" style="">
+      <li>
+        <a href="/admin/" class="nav-link">
+          Dashboard
+        </a>
+      </li>
+      <li>
+        <a href="/admin/employees" class="nav-link">
+          Employees
+        </a>
+      </li>
+      <li>
+        <a href="/admin/attendance" class="nav-link">
+          Attendace Report
+        </a>
+      </li>
+      <li class="nav-item">
+        <a href="/admin/payroll" class="nav-link active" aria-current="page">
+          Payroll Report
+        </a>
+      </li>
+      <li>
+        <a href="/admin/holidays" class="nav-link">
+          Holidays
+        </a>
+      </li>
+      <li>
+        <a href="/admin/travelpass" class="nav-link">
+          Travel Pass
+        </a>
+      </li>
+      <li>
+        <a href="/admin/deductions" class="nav-link">
+          Deductions
+        </a>
+      </li>
+      <li>
+        <a href="/admin/employees" class="nav-link">
+          Contributions
+        </a>
+      </li>
+      <li>
+        <a href="/admin/leave" class="nav-link">
+          Leave
+        </a>
+      </li>
+    </ul>
+    <div class="d-flex flex-row" style="padding: 15px 5px 15px 5px; border-top: 1px solid #dddddd;" >
+        <div class="d-flex flex-row" style="margin:5px;">
+            <img src="" alt="" class="img-fluid" style="background: gray; width: 80px">
+        </div> 
+            <div class="d-flex flex-column justify-content-center" >
+                <a href="#" class="nav-link">
+                    <u>sampleadmin@bfar.com</u>
+                </a>
+                <p>Admin</p>
+            <div class="d-flex flex-row" >
+                <a href="#" class="nav-link" style="padding-right: 10px !important;">
+                    <u> Account </u>
+                </a>
+                <a href="#" class="nav-link ">
+                    <u> Log-out </u>
                 </a>
             </div>
         </div>
-        <div class="container-aside-list">
-            <label for="employee">Employee</label>
-            <div class="container-aside-list-dropdown  ">
-                <a href="/admin/employees">
-                    <i class="fa-solid fa-user"></i>
-                    <label for="">Employees</label>
-                </a>
-            </div>
-        </div>
-        <div class="container-aside-list">
-            <label for="employee">Payroll</label>
-            <div class="container-aside-list-dropdown ">
-                <a href="/admin/payroll">
-                    <i class="fa-solid fa-receipt"></i>
-                    <label for="">Payment</label>
-                </a>
-            </div>
-        </div>
-        <div class="container-aside-list">
-            <label for="payroll">Attendance</label>
-            <div class="container-aside-list-dropdown">
-                <a href="/admin/records">
-                    <i class="fa-solid fa-calendar-check"></i>
-                    <label for="">Records</label>
-                </a>
-            </div>
-        </div>
-        <div class="container-aside-list">
-            <label for="payroll">Holiday and Travel Order</label>
-            <div class="container-aside-list-dropdown">
-                <a href="/admin/holidays">
-                    <i class="fa-solid fa-calendar-check"></i>
-                    <label for="">Holiday</label>
-                </a>
-            </div>
-            <div class="container-aside-list-dropdown">
-                <a href="/admin/travelpass">
-                    <i class="fa-solid fa-calendar-check"></i>
-                    <label for="">Travel Pass</label>
-                </a>
-            </div>
-        </div>
-        <div class="container-aside-list">
-            <label for="payroll">Deductions</label>
-            <div class="container-aside-list-dropdown">
-                <a href="/admin/deductions">
-                    <i class="fa-solid fa-calendar-check"></i>
-                    <label for="">Deductions</label>
-                </a>
-            </div>
-        </div>
-        <div class="container-aside-list">
-            <label for="payroll">Settings</label>
-            <div class="container-aside-list-dropdown">
-                <a href="#">
-                    <i class="fa-solid fa-sliders"></i>
-                    <label for="">Accounts</label>
-                </a>
-            </div>
-        </div>
-    </aside>
-
-
-
+    </div>
+  </div>
